Added map box and protocol setup

--- a/ThereYet/Info.plist
+++ b/ThereYet/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>MGLMapboxMetricsEnabledSettingShownInApp</key>
+	<true/>
+	<key>MGLMapboxAccessToken</key>
+	<string>pk.eyJ1IjoidXRhLW1vYmkiLCJhIjoiY2lpcXZ4aXlpMDJmdnZxbTVvMG5odXIxZiJ9.91UEUAkG4XyGbId_EnEB1g
+</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
