--- a/ThereYet/Info.plist
+++ b/ThereYet/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>SignPainter.otf</string>
+	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Student&apos;s Location</string>
 	<key>MGLMapboxMetricsEnabledSettingShownInApp</key>
